--- a/README.asciidoc
+++ b/README.asciidoc
@@ -9,3 +9,33 @@ websites.
 MobiPocket is an eBook format created by Mobipocket SA. This tool also
 uses a php readability port made by
 link:http://www.keyvan.net/2010/08/php-readability/[Keyvan Minoukadeh].
+
+Code example
+------------
+
+See index.php for an example (loads up a local html file). The following
+code is used:
+
+**********
+$options = array(
+	"title"=>"GROUP BY vs ORDER BY",
+	"author"=>"thetricky.net",
+	"subject"=>"MySql"
+);
+
+$mobi = new MOBI();
+$mobi->setFileSource("test/test.html");
+$mobi->setOptions($options);
+
+$mobi->save("test/test.mobi");
+**********
+
+The options array contains the metadata (if possible, always specify
+title, which is sometimes used as identifier in Mobi readers).
+
+Implementation
+--------------
+
+This code was implemented while reverse-engineering the MobiPocket format.
+Therefore this code absolutely isn't optimized for speed, but rather for
+easy changes, as getting it to produce valid files was quite fiddly.
