--- a/README.asciidoc
+++ b/README.asciidoc
@@ -18,43 +18,37 @@ Code sample
 
 See index.php for an example of using this program.
 
-.Sending an online article as a download
-[php]
-code~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-//Create the MOBI object
-$mobi = new MOBI();
+Sending an online article as a download:
+  //Create the MOBI object
+  $mobi = new MOBI();
+  
+  //Set the content provider
+  $content = new OnlineArticle("URL");
+  $mobi->setContentProvider($content);
+  
+  //Get title and make it a 12 character long url-safe filename
+  $title = $mobi->getTitle();
+  if($title === false) $title = "file";
+  $title = urlencode(str_replace(" ", "_", strtolower(substr($title, 0, 12))));
+  
+  //Send the mobi file as download
+  $mobi->download($title.".mobi");
 
-//Set the content provider
-$content = new OnlineArticle("URL");
-$mobi->setContentProvider($content);
-
-//Get title and make it a 12 character long url-safe filename
-$title = $mobi->getTitle();
-if($title === false) $title = "file";
-$title = urlencode(str_replace(" ", "_", strtolower(substr($title, 0, 12))));
-
-//Send the mobi file as download
-$mobi->download($title.".mobi");
-code~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-.Using a previously generated/downloaded html file (will not download any images!)
-[php]
-code~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-$data = "<html>...</html>";
-$options = array(
-	"title" => "Local document",
-	"author" => "Author name",
-	"subject" => "Subject"
-);
-//Create the MOBI object
-$mobi = new MOBI();
-
-$mobi->setData($data);
-$mobi->setOptions($options);
-
-//Send the mobi file as download
-$mobi->save($options["title"].".mobi");
-code~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Using a previously generated/downloaded html file (will not download any images!):
+  $data = "<html>...</html>";
+  $options = array(
+  	"title" => "Local document",
+  	"author" => "Author name",
+  	"subject" => "Subject"
+  );
+  //Create the MOBI object
+  $mobi = new MOBI();
+  
+  $mobi->setData($data);
+  $mobi->setOptions($options);
+  
+  //Send the mobi file as download
+  $mobi->save($options["title"].".mobi");
 
 Implementation
 --------------
